--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       margin:0; font-family:Inter,system-ui,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
       color:#e5e7eb;
       display:flex; align-items:center; justify-content:center; padding:24px;
-      background:url('your-image.jpg') center/cover no-repeat fixed; /* 👉 đổi link ảnh ở đây */
+      background:url('anhnen.jfif') center/cover no-repeat fixed; /* 👉 đổi link ảnh ở đây */
       position:relative;
     }
     body::before{
