--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <title>Countdown Gặp Người Yêu</title>
+  <title>Lần đầu gặp nhau</title>
   <style>
     body {
       margin: 0;
