--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background: url('anhnen.jfif') no-repeat center center/cover;
+      background: url('https://github.com/nntan2808-droid/Anh-Phuong/blob/main/anhnen.jfif') no-repeat center center/cover;
       font-family: Arial, sans-serif;
       color: white;
       text-shadow: 2px 2px 5px rgba(0,0,0,0.7);
